--- a/enclosed-exceptions.cabal
+++ b/enclosed-exceptions.cabal
@@ -3,11 +3,11 @@ version:             1.0.0
 synopsis:            Catching all exceptions from within an enclosed computation
 description:         Catching all exceptions raised within an enclosed computation,
                      while remaining responsive to (external) asynchronous exceptions.
-homepage:            https://github.com/jcristovao/async-exceptions
+homepage:            https://github.com/jcristovao/enclosed-exceptions
 license:             MIT
 license-file:        LICENSE
-author:              Michael Snoyman
-maintainer:          michael@snoyman.com, jcristovao@gmail.com
+author:              Michael Snoyman, João Cristóvão
+maintainer:          jcristovao@gmail.com, michael@snoyman.com
 category:            Control, Prelude
 build-type:          Simple
 cabal-version:       >=1.8
@@ -32,11 +32,11 @@ test-suite test
                    , monad-control
                    , async                         >= 2.0
                    , deepseq
-                   , hspec >= 1.3
+                   , hspec                         >= 1.3
                    , QuickCheck
                    , transformers
     ghc-options:     -Wall
 
 source-repository head
   type:     git
-  location: git://github.com/jcristovao/enclosed_exceptions.git
+  location: git://github.com/jcristovao/enclosed-exceptions.git
