--- a/enclosed-exceptions.cabal
+++ b/enclosed-exceptions.cabal
@@ -8,7 +8,7 @@ license:             MIT
 license-file:        LICENSE
 author:              Michael Snoyman, João Cristóvão
 maintainer:          jmacristovao@gmail.com, michael@snoyman.com
-category:            Control, Prelude
+category:            Control
 build-type:          Simple
 cabal-version:       >=1.8
 
