--- a/enclosed-exceptions.cabal
+++ b/enclosed-exceptions.cabal
@@ -23,6 +23,7 @@ library
                      , monad-control
                      , async                         >= 2.0
                      , deepseq
+                     , transformers-base
   ghc-options:         -Wall -fno-warn-orphans
 
 test-suite test
@@ -37,6 +38,7 @@ test-suite test
                    , hspec                         >= 1.3
                    , QuickCheck
                    , transformers
+                   , transformers-base
     ghc-options:     -Wall
 
 source-repository head
