Demonstrate problem with escaping BlockedIndefinitely exceptions

--- a/enclosed-exceptions.cabal
+++ b/enclosed-exceptions.cabal
@@ -36,6 +36,7 @@ test-suite test
                    , deepseq
                    , hspec                         >= 1.3
                    , QuickCheck
+                   , stm
                    , transformers
                    , transformers-base
     ghc-options:     -Wall
